--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ outputs:
         - pip
         - python >=3.6
       run:
+        - backports.cached_property >=1.0.1,=1.0
         - dataclasses
         - duet-python >=0.2.0,=0.2
         - matplotlib-base >=3.0,=3
@@ -38,7 +39,7 @@ outputs:
         - pandas
         - sortedcontainers >=2.0,=2
         - scipy
-        - sympy
+        - sympy <1.10
         - typing_extensions
         - tqdm
 
