--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ outputs:
         - pip
         - python >=3.6
       run:
-        - backports.cached_property >=1.0.1,=1.0
+        - backports.cached-property >=1.0.1,=1.0
         - dataclasses
         - duet-python >=0.2.0,=0.2
         - matplotlib-base >=3.0,=3
