--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ outputs:
       host:
         - pip
         - python >=3.6
-        - setuptools
+        - setuptools >=40.8.0
         - wheel
       run:
         - backports.cached-property >=1.0.1,=1.0
@@ -72,7 +72,7 @@ outputs:
       host:
         - pip
         - python >=3.6
-        - setuptools
+        - setuptools >=40.8.0
         - wheel
       run:
         - {{ name }}-core =={{ version }}
@@ -104,7 +104,7 @@ outputs:
       host:
         - pip
         - python >=3.6
-        - setuptools >=40.8.0
+        - setuptools >=40.8.0 >=40.8.0
         - wheel
       run:
         - {{ name }}-core =={{ version }}
@@ -135,7 +135,7 @@ outputs:
       host:
         - pip
         - python >=3.7
-        - setuptools
+        - setuptools >=40.8.0
         - wheel
       run:
         - {{ name }}-core =={{ version }}
@@ -184,7 +184,7 @@ outputs:
       host:
         - pip
         - python >=3.6
-        - setuptools
+        - setuptools >=40.8.0
         - wheel
       run:
         - {{ name }}-core =={{ version }}
@@ -216,7 +216,7 @@ outputs:
       host:
         - pip
         - python >=3.6
-        - setuptools
+        - setuptools >=40.8.0
         - wheel
       run:
         - {{ name }}-core =={{ version }}
@@ -248,7 +248,7 @@ outputs:
       host:
         - pip
         - python >=3.6
-        - setuptools
+        - setuptools >=40.8.0
         - wheel
       run:
         - {{ name }}-core =={{ version }}
@@ -281,7 +281,7 @@ outputs:
       host:
         - pip
         - python >=3.6
-        - setuptools
+        - setuptools >=40.8.0
         - wheel
       run:
         - {{ name }}-aqt =={{ version }}
