Add python version

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,6 +5,7 @@
 {% set doc_url = "https://quantumai.google/cirq/install" %}
 {% set license = "Apache-2.0" %}
 {% set license_file = "LICENSE" %}
+{% set python_ver = "python >=3.7" %}
 
 
 package:
@@ -28,7 +29,7 @@ outputs:
     requirements:
       host:
         - pip
-        - python >=3.6
+        - {{ python_ver }}
       run:
         - backports.cached-property >=1.0.1,=1.0
         - dataclasses
@@ -37,6 +38,7 @@ outputs:
         - networkx >=2.4,=2
         - numpy >=1.16,=1
         - pandas
+        - {{ python_ver }}
         - sortedcontainers >=2.0,=2
         - scipy
         - sympy <1.10
@@ -69,10 +71,11 @@ outputs:
     requirements:
       host:
         - pip
-        - python >=3.6
+        - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
         - requests >=2.18,=2
+        - {{ python_ver }}
 
     test:
       imports:
@@ -99,9 +102,10 @@ outputs:
     requirements:
       host:
         - pip
-        - python >=3.6
+        - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
+        - {{ python_ver }}
 
     test:
       imports:
@@ -128,7 +132,7 @@ outputs:
     requirements:
       host:
         - pip
-        - python >=3.7
+        - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
         - attrs >=20.3.0,=20.3
@@ -149,6 +153,7 @@ outputs:
         - six >=1.16.0,=1.16
         - sniffio >=1.2.0,=1.2
         - toml >=0.10.2,=0.10
+        - {{ python_ver }}
 
     test:
       imports:
@@ -175,10 +180,11 @@ outputs:
     requirements:
       host:
         - pip
-        - python >=3.6
+        - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
         - requests >=2.18,=2
+        - {{ python_ver }}
 
     test:
       imports:
@@ -205,10 +211,11 @@ outputs:
     requirements:
       host:
         - pip
-        - python >=3.6
+        - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
         - requests >=2.18,=2
+        - {{ python_ver }}
 
     test:
       imports:
@@ -235,11 +242,12 @@ outputs:
     requirements:
       host:
         - pip
-        - python >=3.6
+        - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
         - google-api-core-grpc >=1.14.0,<2.0.0dev
         - protobuf >=3.13.0
+        - {{ python_ver }}
 
     test:
       imports:
@@ -266,7 +274,7 @@ outputs:
     requirements:
       host:
         - pip
-        - python >=3.6
+        - {{ python_ver }}
       run:
         - {{ name }}-aqt =={{ version }}
         - {{ name }}-core =={{ version }}
@@ -275,6 +283,7 @@ outputs:
         - {{ name }}-pasqal =={{ version }}
         - {{ name }}-rigetti =={{ version }}
         - {{ name }}-web =={{ version }}
+        - {{ python_ver }}
 
     test:
       imports:
