--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -248,6 +248,7 @@ outputs:
         - {{ name }}-core =={{ version }}
         - google-api-core-grpc >=1.14.0,<2.0.0dev
         - protobuf >=3.13.0
+        - proto-plus >=1.20.0
         - {{ python_ver }}
 
     test:
