--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ outputs:
       run:
         - backports.cached-property >=1.0.1,=1.0
         - dataclasses
-        - duet-python >=0.2.0,=0.2
+        - duet-python >=0.2.7,=0.2
         - matplotlib-base >=3.0,=3
         - networkx >=2.4,=2
         - numpy >=1.16,=1
@@ -137,24 +137,7 @@ outputs:
         - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
-        - attrs >=20.3.0,=20.3
-        - certifi >=2021.5.30,=2021.5
-        - h11 >=0.9.0,=0.9
-        - httpcore >=0.11.1,=0.11
-        - httpx >=0.15.5,=0.15
-        - idna >=2.10,=2
-        - iso8601 >=0.1.14,=0.1
-        - pydantic >=1.8.2,=1.8
-        - pyjwt >=1.7.1,=1.7
-        - pyquil >=3.0.0,=3.0
-        - python-dateutil >=2.8.1,=2.8
-        - qcs-api-client >=0.8.0,=0.8
-        - retrying >=1.3.3,=1.3
-        - rfc3339 >=6.2,=6
-        - rfc3986 >=1.5.0,=1.5
-        - six >=1.16.0,=1.16
-        - sniffio >=1.2.0,=1.2
-        - toml >=0.10.2,=0.10
+        - pyquil >=3.0.0
         - {{ python_ver }}
 
     test:
@@ -248,7 +231,7 @@ outputs:
       run:
         - {{ name }}-core =={{ version }}
         - google-api-core-grpc >=1.14.0,<2.0.0dev
-        - protobuf >=3.13.0
+        - protobuf >=3.15.0,<4
         - proto-plus >=1.20.0
         - {{ python_ver }}
 
