--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,17 +34,15 @@ outputs:
         - pip
         - {{ python_ver }}
       run:
-        - backports.cached-property >=1.0.1,=1.0
-        - dataclasses
         - duet-python >=0.2.7,=0.2
         - matplotlib-base >=3.0,=3
         - networkx >=2.4,=2
-        - numpy >=1.16,=1
+        - numpy >=1.16,<1.24
         - pandas
         - {{ python_ver }}
         - sortedcontainers >=2.0,=2
         - scipy
-        - sympy <1.10
+        - sympy
         - typing_extensions
         - tqdm
 
@@ -138,7 +136,7 @@ outputs:
         - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
-        - pyquil >=3.0.0
+        - pyquil >=3.2.0
         - {{ python_ver }}
 
     test:
