--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,16 +32,16 @@ outputs:
         - pip
         - {{ python_ver }}
       run:
-        - duet-python >=0.2.7,=0.2
+        - duet-python >=0.2.8,=0.2
         - matplotlib-base >=3.0,=3
-        - networkx >=2.4,=2
-        - numpy >=1.16,<1.24
+        - networkx >=2.4
+        - numpy >=1.16,=1
         - pandas
         - {{ python_ver }}
         - sortedcontainers >=2.0,=2
         - scipy
         - sympy
-        - typing_extensions
+        - typing_extensions >=4.2
         - tqdm
 
     test:
@@ -134,7 +134,7 @@ outputs:
         - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
-        - pyquil >=3.2.0
+        - pyquil >=3.2.0,=3
         - {{ python_ver }}
 
     test:
@@ -227,8 +227,8 @@ outputs:
         - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
-        - google-api-core-grpc >=1.14.0,<2.0.0dev
-        - protobuf >=3.15.0,<4
+        - google-api-core-grpc >=1.14.0
+        - protobuf >=3.15.0
         - proto-plus >=1.20.0
         - {{ python_ver }}
 
@@ -247,6 +247,38 @@ outputs:
       doc_url: {{ doc_url }}
       license: {{ license }}
       license_file: {{ name }}-google/{{ license_file }}
+
+ - name: {{ name }}-ft
+    build:
+      noarch: python
+    script: build_{{ name }}-core.sh
+
+    requirements:
+      host:
+        - pip
+        - {{ python_ver }}
+      run:
+        - attrs
+        - cachetools >=5.3
+        - ipywidgets
+        - nbconvert
+        - nbformat
+
+    test:
+      imports:
+        - {{ name }}_ft
+      commands:
+        - pip check
+      requires:
+        - pip
+
+    about:
+      home: {{ home }}
+      summary: {{ summary }}
+      dev_url: https://github.com/quantumlib/Cirq/tree/master/cirq-ft
+      doc_url: {{ doc_url }}
+      license: {{ license }}
+      license_file: {{ name }}-ft/{{ license_file }}
 
 
   - name: {{ name }}
