--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -296,6 +296,7 @@ outputs:
         - {{ name }}-google =={{ version }}
         - {{ name }}-ionq =={{ version }}
         - {{ name }}-pasqal =={{ version }}
+        - {{ name }}-ft =={{ version }}
         - {{ name }}-rigetti =={{ version }}
         - {{ name }}-web =={{ version }}
         - {{ python_ver }}
