--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -134,7 +134,7 @@ outputs:
         - {{ python_ver }}
       run:
         - {{ name }}-core =={{ version }}
-        - pyquil >=3.2.0,=3
+        - pyquil >=3.2.0, <3.3.0
         - {{ python_ver }}
 
     test:
