--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -39,7 +39,7 @@ outputs:
         - duet-python >=0.2.8
         - matplotlib-base >=3.0,<4
         - networkx >=2.4
-        - numpy >=1.22,<2
+        - numpy >=1.22
         - pandas
         - sortedcontainers >=2.0,<3
         - scipy >=1.0,<2
